--- a/src/components/Home/PopularCourse/PopularCourse.css
+++ b/src/components/Home/PopularCourse/PopularCourse.css
@@ -1,10 +1,17 @@
-.popularCourse-title h1{
+
+.popularCourse-title{
+  position: relative;
   text-align: start;
+}
+.popularCourse-title h1{
   font-size: 40px;
 }
-.p-info:hover{
+.p-info p{
+  color: black;
+}
+.p-info p:hover{
 color: #2B4EFF;
-cursor: pointer;
+
 }
 .fa-arrow-right{
   margin-left: 5px;
@@ -25,10 +32,10 @@ cursor: pointer;
   margin-left: 25px;
   text-align: start;
 }
-.items-info h2{
-  color: #2B4EFF;
+.items-info h3{
+  color:#2B4EFF ;
 }
-.item:hover .items-info h2{
+.item:hover .items-info h3{
   color: aliceblue;
 }
 .item{
@@ -43,4 +50,14 @@ cursor: pointer;
   color: white;
   border: 2px solid #2B4EFF;
   
+}
+.popularCourse-title span{
+  margin-left: 15px;
+}
+.popularCourse-title span img {
+  position: absolute;
+  left: 70px;
+  bottom: 20px;
+  z-index: -1;
+  width: 180px;
 }
