--- a/src/components/Shared/Footer/Footer.css
+++ b/src/components/Shared/Footer/Footer.css
@@ -1,7 +1,7 @@
 footer{
   background-color: #0E1133;
   color: white;
-  padding: 50px;
+  padding: 50px 0px 20px 0px;
 }
 
 .footer-item-1 img{
@@ -57,4 +57,10 @@ width: 114px;
     border: 0;
     color: white;
     border: 2px solid #2b4eff;
+  }
+ 
+  .copyright{
+    margin-top: 50px;
+    border-top: 1px solid;
+    color: rgb(150, 149, 149);
   }
